# ppl.llm.kernel.cuda

./: .gitignore  CMakeLists.txt  README.md  build.sh
cmake/: deps.cmake
cmake/Modules/: FindCUDNN.cmake
include/cudakernel/llm/: column_parallel_linear.h  key_value_cache.h  matmul_cublas.h  multi_head_attention.h  multi_head_cache_attention.h  parallel_embedding.h  rotary_embed.h  row_parallel_linear.h
include/ppl/kernel/llm/cuda/common/: general_include.h  matrix_layout.h  type_dispatch.h
include/ppl/kernel/llm/cuda/cublas/: gemm.h  gemm_algo.h
include/ppl/kernel/llm/cuda/flash_attn2/: fmha.h
include/ppl/kernel/llm/cuda/pmx/: column_parallel_linear.h  geglu.h  gelu.h  kv_cache_reorder.h  layer_norm.h  linear.h  moe_column_parallel_linear.h  moe_reduce.h  moe_row_parallel_linear.h  moe_select.h  multi_head_attention.h  multi_head_cache_attention.h  parallel_embedding.h  penalty.h  pixel_unshuffle.h  position_index.h  rms_norm.h  rotary_2d_position_embedding.h  rotary_position_embedding.h  row_parallel_linear.h  sample.h  silu.h  swiglu.h  tensor_parallel_rms_norm.h  vision_embedding.h
include/ppl/kernel/llm/cuda/pmx/f8f8/: cast.h  column_parallel_linear.h  row_parallel_linear.h
include/ppl/kernel/llm/cuda/pmx/i4f16/: column_parallel_linear.h  gemm.h  quantize.h  row_parallel_linear.h
include/ppl/kernel/llm/cuda/pmx/i8i8/: column_parallel_linear.h  quantize.h  row_parallel_linear.h
include/ppl/kernel/llm/cuda/quant/: common.h  layout.h
include/ppl/kernel/llm/cuda/quant/i8/: column_parallel_linear.h  core.h  rmsnorm.h  row_parallel_linear.h  silu.h
include/ppl/kernel/llm/cuda/xformer/: fmha.h
python/: CMakeLists.txt  py_main.cc
python/demo/: README.md  demo.py  py_demo_main.cc  py_demo_main.h  py_identity.cc  py_identity.h
src/llm/: column_parallel_linear.cu  key_value_cache.cu  matmul_cublas.cu  multi_head_attention.cu  multi_head_cache_attention.cu  parallel_embedding.cu  rotary_embed.cu  row_parallel_linear.cu
src/llm/xformer_fmha/: gemm_kernel_utils.h  kernel_forward.h  xformer_fmha.cu  xformer_fmha.h
src/ppl/kernel/llm/cuda/cublas/: gemm.cu  gemm_algo.cu
src/ppl/kernel/llm/cuda/flash_attn2/: fmha.cu
src/ppl/kernel/llm/cuda/flash_attn2/src/: block_info.h  flash.h  flash_api.cu  flash_api.h  flash_fwd_hdim128_fp16_g0_sm80.cu  flash_fwd_hdim128_int8_g8_sm80.cu  flash_fwd_hdim192_mla_fp16_g0_sm80.cu  flash_fwd_hdim256_fp16_g0_sm80.cu  flash_fwd_hdim256_int8_g8_sm80.cu  flash_fwd_hdim64_fp16_g0_sm80.cu  flash_fwd_hdim64_int8_g8_sm80.cu  flash_fwd_hdim96_fp16_g0_sm80.cu  flash_fwd_hdim96_int8_g8_sm80.cu  flash_fwd_kernel.h  flash_fwd_launch_template.h  flash_fwd_split_hdim128_fp16_g0_sm80.cu  flash_fwd_split_hdim128_int8_g8_sm80.cu  flash_fwd_split_hdim256_fp16_g0_sm80.cu  flash_fwd_split_hdim256_int8_g8_sm80.cu  flash_fwd_split_hdim64_fp16_g0_sm80.cu  flash_fwd_split_hdim64_int8_g8_sm80.cu  flash_fwd_split_hdim96_fp16_g0_sm80.cu  flash_fwd_split_hdim96_int8_g8_sm80.cu  generate_kernels.py  kernel_traits.h  mask.h  softmax.h  static_switch.h  utils.h
src/ppl/kernel/llm/cuda/pmx/: column_parallel_linear.cu  geglu.cu  gelu.cu  kv_cache_reorder.cu  layer_norm.cu  linear.cu  moe_column_parallel_linear.cu  moe_reduce.cu  moe_row_parallel_linear.cu  moe_select.cu  multi_head_attention.cu  multi_head_cache_attention.cu  multi_head_cache_attention.cu.bak  parallel_embedding.cu  penalty.cu  pixel_unshuffle.cu  position_index.cu  quant_utils.h  rms_norm.cu  rotary_2d_position_embedding.cu  rotary_position_embedding.cu  row_parallel_linear.cu  sample.cu  silu.cu  swiglu.cu  tensor_parallel_rms_norm.cu  type.h  vision_embedding.cu
src/ppl/kernel/llm/cuda/pmx/f8f8/: cast.cu  column_parallel_linear.cu  row_parallel_linear.cu
src/ppl/kernel/llm/cuda/pmx/i4f16/: column_parallel_linear.cu  gemm.cu  quantize.cu  row_parallel_linear.cu
src/ppl/kernel/llm/cuda/pmx/i4f16/gemm/: algorithm.h  gemm.h  gemm_api.cu  gemm_api.h  gemm_config.h  gemm_iters.h  gemm_runner.h  gemv.cu  gemv.h  heuristic.cu  heuristic.h  reduce.cuh  shape.h  utils.h
src/ppl/kernel/llm/cuda/pmx/i8i8/: column_parallel_linear.cu  quantize.cu  rms_norm.cu  row_parallel_linear.cu  silu.cu  split.cu  swiglu.cu
src/ppl/kernel/llm/cuda/pmx/multi_head_cache_attention/: kernel.cu  utils.cu
src/ppl/kernel/llm/cuda/quant/i8/: column_parallel_linear.cu  core.cu  rmsnorm.cu  row_parallel_linear.cu  silu.cu
src/ppl/kernel/llm/cuda/xformer/: fmha.cu  fmha.h
src/ppl/kernel/llm/cuda/xformer/autogen/: cutlassF.h
src/ppl/kernel/llm/cuda/xformer/autogen/impl/: cutlassF_bf16_aligned.cu  cutlassF_f16_aligned.cu  cutlassF_f16_notaligned.cu  cutlassF_f32_aligned.cu  cutlassF_f32_notaligned.cu
src/ppl/kernel/llm/cuda/xformer/gemm/: mma_from_smem.h
src/ppl/kernel/llm/cuda/xformer/utils/: kernel_forward.h
src/ppl/llm/kernel/cuda/pmx/: sample.cu
test/: config.py  gemm_main.cu  gemm_test.cu  gemm_test.h
